Added content for follow me drone

--- a/index.html
+++ b/index.html
@@ -1,179 +1,196 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/style.css"/>
-      
-    </head>
+<html>
 
-    <body>
-      <header>
-        <div class="container">
-          <div class="row">
-            <div class="col s12 center-align">
-              <h1>UDACITY PYTORCH ROBOTICS</h1>
-            </div>
-            <div class="col s12 right-align">
-              <a href="#">ShowCase Challenge</a>
-            </div>
-          </div>
-        </div>       
-      </header>
-      <section class="portfolio">
-        <div class="container">
-          <div class="row">
-            <div class="col s12">
-              <h2>Portfolio</h2>
-            </div>
-          </div>
-          <div class="row center-align">
-            <div class="col m4 s12 box-inline">
-              <div class="portfolio__single">
-                <div class="github-logo">
-                  <img src="images/git.png">
-                </div>
-                <h3>Project One</h3>
-                <div class="portfolio__img">
-                  <img src="images/4.jpg">
-                </div>
-                <div class="protfolio__desc">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                </div>
-                <div class="contributors">
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col m4 s12 box-inline">
-              <div class="portfolio__single">
-                <div class="github-logo">
-                  <img src="images/git.png">
-                </div>
-                <h3>Project One</h3>
-                <div class="portfolio__img">
-                  <img src="images/4.jpg">
-                </div>
-                <div class="protfolio__desc">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                </div>
-                <div class="contributors">
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col m4 s12 box-inline">
-              <div class="portfolio__single">
-                <div class="github-logo">
-                  <img src="images/git.png">
-                </div>
-                <h3>Project One</h3>
-                <div class="portfolio__img">
-                  <img src="images/4.jpg">
-                </div>
-                <div class="protfolio__desc">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                </div>
-                <div class="contributors">
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col m4 s12 box-inline">
-              <div class="portfolio__single">
-                <div class="github-logo">
-                  <img src="images/git.png">
-                </div>
-                <h3>Project One</h3>
-                <div class="portfolio__img">
-                  <img src="images/4.jpg">
-                </div>
-                <div class="protfolio__desc">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                </div>
-                <div class="contributors">
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col m4 s12 box-inline">
-              <div class="portfolio__single">
-                <div class="github-logo">
-                  <img src="images/git.png">
-                </div>
-                <h3>Project One</h3>
-                <div class="portfolio__img">
-                  <img src="images/4.jpg">
-                </div>
-                <div class="protfolio__desc">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                </div>
-                <div class="contributors">
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                  <div class="single-cont">
-                    <img src="images/1.jpg">
-                  </div>
-                </div>
-              </div>
-            </div>      
-          </div>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css?family=Arimo&display=swap" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="css/style.css" />
+
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col s12 center-align">
+          <h1>UDACITY PYTORCH ROBOTICS</h1>
         </div>
-      </section> 
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="col m6 s12">
-              <h3>ABOUT US</h3>
-              <p>sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+        <div class="col s12 right-align">
+          <a href="#">ShowCase Challenge</a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <section class="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h2>Portfolio</h2>
+        </div>
+      </div>
+      <div class="row center-align">
+        <div class="col m4 s12 box-inline">
+          <div class="portfolio__single">
+            <div class="github-logo">
+              <img src="images/git.png">
             </div>
-            <div class="col m6 s12">
-              <h3>TEAM MEMBERS</h3>
-              <p>John McWidth : john@gmail.com</p>
-              <p>John McWidth : john@gmail.com</p>
-              <p>John McWidth : john@gmail.com</p>
-              <p>John McWidth : john@gmail.com</p>
+            <h3>Follow Me Drone</h3>
+            <div class="portfolio__img">
+              <img src="images/4.jpg">
+            </div>
+            <div class="protfolio__desc">
+              <p>This project is dedicated to implement real time object detection and tracking
+                using Drone. It includes detection of object of interest and tracking using drone in
+                full autonomous state.</p>
+            </div>
+            <div class="contributors">
+              <div class="single-cont">
+                <img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4">
+              </div>
+              <div class="single-cont">
+                <img src="https://avatars0.githubusercontent.com/u/33878359?s=400&v=4">
+              </div>
+              <div class="single-cont">
+                <img src="https://avatars1.githubusercontent.com/u/20285786?s=400&v=4">
+              </div>
+              <div class="single-cont">
+                <img src="https://avatars1.githubusercontent.com/u/36210723?s=400&v=4">
+              </div>
+              <div class="single-cont">
+                <img src="https://avatars2.githubusercontent.com/u/43150751?s=400&v=4">
+              </div>
+              <div class="single-cont">
+                <img src="https://avatars2.githubusercontent.com/u/35796765?s=400&v=4">
+              </div>
             </div>
           </div>
         </div>
-      </footer>     
-    </body>
-  </html>
-        
+        <div class="col m4 s12 box-inline">
+          <div class="portfolio__single">
+            <div class="github-logo">
+              <img src="images/git.png">
+            </div>
+            <h3>Lane Detection</h3>
+            <div class="portfolio__img">
+              <img src="images/4.jpg">
+            </div>
+            <div class="protfolio__desc">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="contributors">
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col m4 s12 box-inline">
+          <div class="portfolio__single">
+            <div class="github-logo">
+              <img src="images/git.png">
+            </div>
+            <h3>Project One</h3>
+            <div class="portfolio__img">
+              <img src="images/4.jpg">
+            </div>
+            <div class="protfolio__desc">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="contributors">
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col m4 s12 box-inline">
+          <div class="portfolio__single">
+            <div class="github-logo">
+              <img src="images/git.png">
+            </div>
+            <h3>Project One</h3>
+            <div class="portfolio__img">
+              <img src="images/4.jpg">
+            </div>
+            <div class="protfolio__desc">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="contributors">
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col m4 s12 box-inline">
+          <div class="portfolio__single">
+            <div class="github-logo">
+              <img src="images/git.png">
+            </div>
+            <h3>Project One</h3>
+            <div class="portfolio__img">
+              <img src="images/4.jpg">
+            </div>
+            <div class="protfolio__desc">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            </div>
+            <div class="contributors">
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+              <div class="single-cont">
+                <img src="images/1.jpg">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col m6 s12">
+          <h3>ABOUT US</h3>
+          <p>We are the scholars from Secure and Private AI Scholarship Challenge working on
+            various projects related to Object Detection and Tracking</p>
+        </div>
+        <div class="col m6 s12">
+          <h3>TEAM LEADS</h3>
+          <p>Follow Me Drone : Jess (john@gmail.com)</p>
+          <p>Lane Detection : Test (john@gmail.com)</p>
+          <p>John McWidth : john@gmail.com</p>
+          <p>John McWidth : john@gmail.com</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
+
+</html>
