--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="github-logo">
               <img src="images/git.png">
             </div>
-            <h3>Project One</h3>
+            <h3>Vehicle detection</h3>
             <div class="portfolio__img">
               <img src="images/4.jpg">
             </div>
@@ -123,7 +123,7 @@
             <div class="github-logo">
               <img src="images/git.png">
             </div>
-            <h3>Project One</h3>
+            <h3>Face detection</h3>
             <div class="portfolio__img">
               <img src="images/4.jpg">
             </div>
