--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col s12 center-align">
-          <h1>UDACITY PYTORCH ROBOTICS</h1>
+          <h1>UDACITY WONDER VISION</h1>
         </div>
         <div class="col s12 right-align">
           <a href="#">ShowCase Challenge</a>
