--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <img src="images/git.png">
+              <a href="https://github.com/shashigharti"><img src="images/git.png"></a>
             </div>
             <h3>Follow Me Drone</h3>
             <div class="portfolio__img">
@@ -55,7 +55,7 @@
                 <img src="https://avatars1.githubusercontent.com/u/20285786?s=400&v=4">
               </div>
               <div class="single-cont">
-                <img src="https://avatars1.githubusercontent.com/u/36210723?s=400&v=4">
+                <img src="https://github.com/shashigharti">
               </div>
               <div class="single-cont">
                 <img src="https://avatars2.githubusercontent.com/u/43150751?s=400&v=4">
