Added GitHub repo in link

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             </div>
             <div class="protfolio__desc">
               <p>This project is dedicated to implement real time object detection and tracking
-                using Drone. It includes detection of object of interest and tracking using drone in
+                using a drone. It includes detection of object of interest and tracking using drone in
                 full autonomous state.</p>
             </div>
             <div class="contributors">
               <div class="single-cont">
-                <img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4">
+                <a href="https://github.com/helenabarmer"><img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4"></a>
               </div>
               <div class="single-cont">
                 <img src="https://avatars0.githubusercontent.com/u/33878359?s=400&v=4">
