Added open in new window

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="contributors">
               <div class="single-cont">
-                <a href="https://github.com/helenabarmer"><img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4"></a>
+                <a href="https://github.com/helenabarmer" target="_blank"><img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4"></a>
               </div>
               <div class="single-cont">
                 <a href="https://github.com/jess-s">
