Added GitHub repos for the drone team

--- a/index.html
+++ b/index.html
@@ -35,35 +35,44 @@
             <div class="github-logo">
               <a href="https://github.com/jess-s/SPAIC-DroneCV"><img src="images/git.png"></a>
             </div>
-            <h3>Follow Me Drone</h3>
+            <h3>Drone CV</h3>
             <div class="portfolio__img">
               <img src="images/4.jpg">
             </div>
             <div class="protfolio__desc">
-              <p>This project is dedicated to implement real time object detection and tracking
-                using a drone. It includes detection of object of interest and tracking using drone in
-                full autonomous state.</p>
+              <p>This project is dedicated to implement a real time object detection and tracking in PyTorch
+                using a drone.</p>
             </div>
             <div class="contributors">
               <div class="single-cont">
-                <a href="https://github.com/helenabarmer" target="_blank"><img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4"></a>
+                <a href="https://github.com/helenabarmer" target="_blank">
+                  <img src="https://avatars0.githubusercontent.com/u/44475530?s=400&v=4">
+                </a>
               </div>
               <div class="single-cont">
-                <a href="https://github.com/jess-s">
+                <a href="https://github.com/jess-s" target="_blank">
                   <img src="https://avatars0.githubusercontent.com/u/33878359?s=400&v=4">
                 </a>
               </div>
               <div class="single-cont">
-                <img src="https://avatars1.githubusercontent.com/u/20285786?s=400&v=4">
+                <a href="https://github.com/Shashankjain12" target="_blank">
+                  <img src="https://avatars1.githubusercontent.com/u/20285786?s=400&v=4">
+                </a>
               </div>
               <div class="single-cont">
-                <img src="https://github.com/shashigharti">
+                <a href="https://github.com/shashigharti" target="_blank">
+                <img src="https://avatars1.githubusercontent.com/u/5582809?s=400&v=4">
+              </a>
               </div>
               <div class="single-cont">
+                <a href= "https://github.com/arunn-thevapalan" target="_blank"> 
                 <img src="https://avatars2.githubusercontent.com/u/43150751?s=400&v=4">
+              </a>
               </div>
               <div class="single-cont">
-                <img src="https://avatars2.githubusercontent.com/u/35796765?s=400&v=4">
+                <a href="https://github.com/TemitopeOladokun" target="_blank">
+                <img src="https://avatars3.githubusercontent.com/u/50429511?s=400&v=4">
+              </a>
               </div>
             </div>
           </div>
