--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <h3>Drone CV</h3>
             <div class="portfolio__img">
-              <img src="images\4.jpg">
+              <img src="images\drone3.jpg" title ="Photo by Matt Pritchard on Unsplash" alt="Drone" class="center">
             </div>
             <div class="protfolio__desc">
               <p>This project is dedicated to implement a real time object detection and tracking in PyTorch
