--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container">
       <div class="row">
         <div class="col s12 center-align">
-          <h1>UDACITY WONDER VISION</h1>
+          <h1>WONDER VISION TEAM</h1>
         </div>
         <div class="col s12 right-align">
-          <a href="#">ShowCase Challenge</a>
+          <a href="#">Real time object detection using PyTorch</a>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <a href="https://github.com/jess-s/SPAIC-DroneCV"><img src="images/git.png"></a>
+              <a href="https://github.com/jess-s/SPAIC-DroneCV" target="_blank"><img src="images/git.png"></a>
             </div>
             <h3>Drone CV</h3>
             <div class="portfolio__img">
@@ -80,15 +80,17 @@
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <img src="images/git.png">
+              <a href="https://github.com/depo-egy/Wonder_Vision_Lane_Detection" target="_blank"><img src="images/git.png"></a>
             </div>
             <h3>Lane Detection</h3>
             <div class="portfolio__img">
-              <img src="images/4.jpg">
+              <img src="images\lane.jpg" title ="Photo by Dardan on Unsplash" alt="Lane" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p>This project focuses on identification of 
+                lanes of the road. Using various approaches and frameworks including but not limited to OpenCV and PyTorch.
+                This model is to be used in drones, self driving cars and surveillance systems. 
+              </p>
             </div>
             <div class="contributors">
               <div class="single-cont">
