--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-          <h2>Portfolio</h2>
+          <h2>Projects</h2>
         </div>
       </div>
       <div class="row center-align">
@@ -40,8 +40,10 @@
               <img src="images\drone3.jpg" title ="Photo by Matt Pritchard on Unsplash" alt="Drone" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>This project is dedicated to implement a real time object detection and tracking in PyTorch
-                using a drone.</p>
+              <p>How can you use a drone to track objects or people? 
+                The team of the Drone Tracking study group have researched use cases, 
+                implemented tutorials and tried to find information how to integrate federated learning 
+                and differential privacy with a drone.</p>
             </div>
             <div class="contributors">
               <div class="single-cont">
@@ -94,40 +96,68 @@
             </div>
             <div class="contributors">
               <div class="single-cont">
-                <img src="images/1.jpg">
+                <a href="https://github.com/adhikariastha5" target="_blank">
+                  <img src="https://avatars0.githubusercontent.com/u/19780364?s=400&v=4">
+                </a>
               </div>
               <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
+                  <a href="https://github.com/oudarjya718" target="_blank">
+                    <img src="https://avatars0.githubusercontent.com/u/36289901?s=400&v=44">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/depo-egy" target="_blank">
+                      <img src="https://avatars3.githubusercontent.com/u/32489701?s=400&v=4">
+                    </a>
+                  </div>
+                  <div class="single-cont">
+                      <a href="https://github.com/shiv-u" target="_blank">
+                        <img src="https://avatars3.githubusercontent.com/u/29162160?s=400&v=4">
+                      </a>
+                    </div>
+                    <div class="single-cont">
+                        <a href="https://github.com/drvigneshwari" target="_blank">
+                          <img src="https://avatars0.githubusercontent.com/u/50787118?s=400&v=4">
+                        </a>
+                      </div>
             </div>
           </div>
         </div>
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <img src="images/git.png">
+                <a href="https://github.com/poojavinod100/People-Counting-Crowd-Density-Detection" target="_blank">
+                  <img src="images/git.png"></a>
             </div>
-            <h3>Vehicle detection</h3>
+            <h3>Crowd density</h3>
             <div class="portfolio__img">
-              <img src="images/4.jpg">
+              <img src="images\crowd.jpg" title ="Photo by chuttersnap on Unsplash" alt="Lane" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p>The main objective of this project is to build a self-sufficient software, 
+                that can accurately predict whether or not a stampede is imminent, based on the incoming live visuals of a place.</p>
             </div>
             <div class="contributors">
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
+                <div class="single-cont">
+                    <a href="https://github.com/944893426" target="_blank">
+                    <img src="https://avatars0.githubusercontent.com/u/37170206?s=400&v=4">
+                  </a> 
+                </div>
+                  <div class="single-cont">
+                      <a href="https://github.com/q-viper" target="_blank">
+                      <img src="https://avatars2.githubusercontent.com/u/35986908?s=400&v=4">
+                    </a>
+                  </div>
+                  <div class="single-cont">
+                      <a href="https://github.com/SreekanthZipsy" target="_blank">
+                      <img src="https://avatars2.githubusercontent.com/u/30560398?s=400&v=4">
+                    </a>
+                  </div>
+                  <div class="single-cont">
+                      <a href="https://github.com/poojavinod100" target="_blank">
+                      <img src="https://avatars2.githubusercontent.com/u/37141925?s=400&v=4">
+                    </a>
+                  </div>
             </div>
           </div>
         </div>
