Add picture, crowd

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <h3>Crowd density</h3>
             <div class="portfolio__img">
-              <img src="images\crowd.jpg" title ="Photo by chuttersnap on Unsplash" alt="Lane" class="center">
+              <img src="images\crowd.jpg" title ="Photo by chuttersnap on Unsplash" alt="Crowd" class="center">
             </div>
             <div class="protfolio__desc">
               <p>The main objective of this project is to build a self-sufficient software, 
