Added Face detection

--- a/index.html
+++ b/index.html
@@ -164,26 +164,54 @@
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <img src="images/git.png">
+                <a href="https://github.com/JauraSeerat/Wonder_Vision_Face_Detection" target="_blank">
+                   <img src="images/git.png"></a>
             </div>
             <h3>Face detection</h3>
             <div class="portfolio__img">
-              <img src="images/4.jpg">
+              <img src="images\face.jpg" title ="Photo by Andrew Seaman on Unsplash" alt="Faces" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p>The objective of the project is to calculate the similarity between two facial images. 
+                We forseee this application being used for recognizing known faces like in a visual attendence system
+                 or as a face based login.</p>
             </div>
             <div class="contributors">
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
+                <div class="single-cont">
+                    <a href="https://github.com/Tandon-A" target="_blank">
+                    <img src="https://avatars1.githubusercontent.com/u/37059580?s=400&v=4">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/JauraSeerat" target="_blank">
+                    <img src="https://avatars2.githubusercontent.com/u/46867415?s=400&v=4">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/rupeshpurum" target="_blank">
+                    <img src="https://avatars2.githubusercontent.com/u/38237894?s=400&v=4">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/agatagruza" target="_blank">
+                    <img src="https://avatars2.githubusercontent.com/u/7014697?s=400&v=4">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/agalindom" target="_blank">
+                    <img src="https://avatars2.githubusercontent.com/u/40073517?s=400&v=4">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/adventuroussrv" target="_blank">
+                    <img src="https://avatars2.githubusercontent.com/u/31799654?s=400&v=4">
+                  </a>
+                </div>
+                <div class="single-cont">
+                    <a href="https://github.com/Joyce-O" target="_blank">
+                    <img src="https://avatars3.githubusercontent.com/u/26967919?s=400&v=4">
+                  </a>
+                </div>
             </div>
           </div>
         </div>
