Added face detection

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>WONDER VISION TEAM</h1>
         </div>
         <div class="col s12 right-align">
-          <a href="#">Real time object detection using PyTorch</a>
+          <a href="#">Project Showcase Challenge</a>
         </div>
       </div>
     </div>
@@ -253,7 +253,7 @@
             various projects related to Object Detection and Tracking</p>
         </div>
         <div class="col m6 s12">
-          <h3>TEAM LEADS</h3>
+          <h3>TEAM LEADERS</h3>
           <p>Follow Me Drone : Jess (john@gmail.com)</p>
           <p>Lane Detection : Test (john@gmail.com)</p>
           <p>John McWidth : john@gmail.com</p>
