Added team leaders and About Us

--- a/index.html
+++ b/index.html
@@ -249,15 +249,22 @@
       <div class="row">
         <div class="col m6 s12">
           <h3>ABOUT US</h3>
-          <p>We are the scholars from Secure and Private AI Scholarship Challenge working on
-            various projects related to Object Detection and Tracking</p>
+          <p>Wonder Vision was initiated by <a href="https://github.com/mahakbansal" target="_blank">Mahak Bansal</a> in the Secure and Private AI Scholarship Challenge by Facebook
+            and Udacity. These scholars have been the organisers of the group:
+            <a href="https://github.com/mahakbansal" target="_blank">Mahak Bansal</a>, 
+            <a href="https://github.com/shashigharti" target="_blank">Shashi Gharti</a>, 
+            <a href="https://github.com/Joyce-O" target="_blank">Joyce Obi</a>, 
+            <a href="https://github.com/JauraSeerat" target="_blank">Seeratpal K. Jaura</a>
+            and <a href="https://github.com/helenabarmer" target="_blank">Helena Barmer</a>. 
+            The group eventually divided into subgroups working on implementing real time object detection and tracking.
+        </p>
         </div>
         <div class="col m6 s12">
           <h3>TEAM LEADERS</h3>
-          <p>Follow Me Drone : Jess (john@gmail.com)</p>
-          <p>Lane Detection : Test (john@gmail.com)</p>
-          <p>John McWidth : john@gmail.com</p>
-          <p>John McWidth : john@gmail.com</p>
+          <p>Drone CV: <a href="https://github.com/jess-s" target="_blank">Jess</a></p>
+          <p>Lane Detection: <a href="https://github.com/depo-egy" target="_blank">Mohammad Diab</a></p>
+          <p>Crowd Density: <a href="https://github.com/poojavinod100" target="_blank">Pooja Vinod</a></p>
+          <p>Face Detection: <a href="https://github.com/JauraSeerat" target="_blank">Seeratpal K. Jaura</a> </p>
         </div>
       </div>
     </div>
