Added Finder Drone

--- a/index.html
+++ b/index.html
@@ -218,26 +218,24 @@
         <div class="col m4 s12 box-inline">
           <div class="portfolio__single">
             <div class="github-logo">
-              <img src="images/git.png">
+              <a href="https://github.com/edgarinvillegas/finder-drone-ai" target="_blank">
+                <img src="images/git.png"></a>
             </div>
-            <h3>Project One</h3>
+            <h3>Finder Drone</h3>
             <div class="portfolio__img">
-              <img src="images/4.jpg">
+              <img src="images\cat.jpg" title ="Photo by Borna Bevanda and William Daigneault on Unsplash" alt="Drone" class="center">
             </div>
             <div class="protfolio__desc">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam.Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <p>A project to find anything with a drone! Use case is with cats, drone will find a cat based on videos of it.
+                Please check the summarized presentation <a href="https://www.youtube.com/watch?v=GN3oGCZcUi4" target="_blank">video.
+                </a></p>
             </div>
             <div class="contributors">
               <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
-              <div class="single-cont">
-                <img src="images/1.jpg">
-              </div>
+                <a href="https://github.com/edgarinvillegas" target="_blank">
+                <img src="https://avatars2.githubusercontent.com/u/255083?s=400&v=4">
+              </a>
+            </div>
             </div>
           </div>
         </div>
