Addedd team leaders

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
           <p>Lane Detection: <a href="https://github.com/depo-egy" target="_blank">Mohammad Diab</a></p>
           <p>Crowd Density: <a href="https://github.com/poojavinod100" target="_blank">Pooja Vinod</a></p>
           <p>Face Detection: <a href="https://github.com/JauraSeerat" target="_blank">Seeratpal K. Jaura</a> </p>
+          <p>Finder Drone: <a href="https://github.com/edgarinvillegas" target="_blank">Edgar Villegas</a> </p>
         </div>
       </div>
     </div>
